--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-us">
     <head>My Page</head>
-    <body><p>This is some text</p></body>
+    <body><p>This is some text</p>
+        <br>
+        <a href="anotherpage.html">Go to another page</a>
+        
+    </body>
 </html>
