loading files for new portfolio

--- a/index.html
+++ b/index.html
@@ -1,9 +1,248 @@
 <!DOCTYPE html>
-<html lang="en-us">
-    <head>My Page</head>
-    <body><p>This is some text</p>
-        <br>
-        <a href="anotherpage.html">Go to another page</a>
-        
-    </body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Document</title>
+
+    <link rel="stylesheet" href="stylesheets/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Domine&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+    />
+  </head>
+  <body>
+    <!-- <div class="navigation">
+      <div class="down logo">
+        <a href="#cover">
+          <div class="img_logo"></div>
+        </a>
+      </div>
+      <div class="down"><a href="#about">About</a></div>
+      <div class="down"><a href="#work">Work</a></div>
+      <div class="down"><a href="#notes">Notes</a></div>
+      <div class="down"><a href="#contact">Contact</a></div>
+    </div> -->
+
+    <div class="container">
+      <section id="cover">
+        <!-- <div class="downCenter">
+          <a href="#about">About</a>
+          <div class="arrow"></div>
+        </div> -->
+      </section>
+
+      <section id="about">
+        <!-- <div class="downCenter">
+          <a href="#work">Work</a>
+          <div class="arrow"></div>
+        </div> -->
+      </section>
+
+      <section id="work">
+        <!-- <div class="downCenter">
+          <a href="#notes">Notes</a>
+          <div class="arrow"></div>
+        </div> -->
+      </section>
+
+      <section id="notes">
+        <!-- <div class="downCenter">
+          <a href="#contact">Contact</a>
+          <div class="arrow"></div>
+        </div> -->
+      </section>
+      <footer id="contact"></footer>
+    </div>
+    <div id="skills" class="page">
+      <div class="pageContent">
+        <div>
+          <div class="pageText">
+            <h3>Table of Contents</h3>
+            <hr />
+            <ul>
+              <li>
+                Skills . . . . . . . . . . . . . . . . . . 1
+                <span></span>
+              </li>
+              <li>
+                Portfolio . . . . . . . . . . . . . . . . . 2
+                <span></span>
+              </li>
+              <ul>
+                <li>Island Word Guess . . . . . . . 2<span></span></li>
+                <li>Planet Trivia . . . . . . . . . . . 3<span></span></li>
+                <li>inSeason . . . . . . . . . . . . . . 4<span></span></li>
+              </ul>
+              <li>
+                About Me . . . . . . . . . . . . . . . . 5
+                <span></span>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div>
+          <div class="pageText">
+            <h3>Island Word Guess</h3>
+            <hr />
+            <img class="thumbnail" src="assets/islandthumb2.png" />
+          </div>
+        </div>
+        <div>
+          <div class="pageText">
+            <h3>Planet Trivia</h3>
+            <hr />
+            <img class="thumbnail" src="assets/planetthumb2.png" />
+          </div>
+        </div>
+        <div>
+          <div class="pageText">
+            <h3>inSeason</h3>
+            <hr />
+            <img class="thumbnail" src="assets/inSeasonthumb2.png" />
+          </div>
+        </div>
+        <div>This is test content</div>
+      </div>
+    </div>
+    <div class="backgrounds">
+      <div class="danPortrait">
+        <div class="danContainer">
+          <div
+            id="tlb3"
+            class="triangle-left-blue triangle triangle-blue"
+          ></div>
+          <div
+            id="tlb5"
+            class="triangle-left-blue triangle triangle-blue"
+          ></div>
+          <div
+            id="tlb7"
+            class="triangle-left-blue triangle triangle-blue"
+          ></div>
+          <div
+            id="tlb8"
+            class="triangle-left-blue triangle triangle-blue"
+          ></div>
+          <div
+            id="trb17"
+            class="triangle-right-blue triangle triangle-blue"
+          ></div>
+          <div
+            id="tlb23"
+            class="triangle-left-blue triangle triangle-blue"
+          ></div>
+          <div
+            id="tlb25"
+            class="triangle-left-blue triangle triangle-blue"
+          ></div>
+          <div
+            id="tlb29"
+            class="triangle-left-blue triangle triangle-blue"
+          ></div>
+          <div
+            id="tlb33"
+            class="triangle-left-blue triangle triangle-blue"
+          ></div>
+          <div id="trr9" class="triangle-right-red triangle triangle-red"></div>
+          <div id="tlr11" class="triangle-left-red triangle triangle-red"></div>
+          <div id="tlr13" class="triangle-left-red triangle triangle-red"></div>
+          <div id="tlr15" class="triangle-left-red triangle triangle-red"></div>
+          <div id="tlr19" class="triangle-left-red triangle triangle-red"></div>
+          <div id="tlr21" class="triangle-left-red triangle triangle-red"></div>
+          <div id="tlr27" class="triangle-left-red triangle triangle-red"></div>
+          <div id="tlr31" class="triangle-left-red triangle triangle-red"></div>
+          <div class="myName" id="brian">
+            Brian Hoff
+          </div>
+        </div>
+      </div>
+      <div class="johnPortrait">
+        <div class="johnContainer">
+          <div
+            id="trb2"
+            class="triangle-right-blue triangle triangle-blue"
+          ></div>
+          <div
+            id="trb12"
+            class="triangle-right-blue triangle triangle-blue"
+          ></div>
+          <div
+            id="trb14"
+            class="triangle-right-blue triangle triangle-blue"
+          ></div>
+          <div
+            id="trb16"
+            class="triangle-right-blue triangle triangle-blue"
+          ></div>
+          <div
+            id="trb18"
+            class="triangle-right-blue triangle triangle-blue"
+          ></div>
+          <div
+            id="trb20"
+            class="triangle-right-blue triangle triangle-blue"
+          ></div>
+          <div
+            id="trb22"
+            class="triangle-right-blue triangle triangle-blue"
+          ></div>
+          <div
+            id="tlb28"
+            class="triangle-left-blue triangle triangle-blue"
+          ></div>
+          <div
+            id="trb32"
+            class="triangle-right-blue triangle triangle-blue"
+          ></div>
+          <div id="trr1" class="triangle-right-red triangle triangle-red"></div>
+          <div id="trr4" class="triangle-right-red triangle triangle-red"></div>
+          <div id="trr6" class="triangle-right-red triangle triangle-red"></div>
+          <div id="tlr10" class="triangle-left-red triangle triangle-red"></div>
+          <div id="tlr24" class="triangle-left-red triangle triangle-red"></div>
+          <div
+            id="trr26"
+            class="triangle-right-red triangle triangle-red"
+          ></div>
+          <div id="tlr30" class="triangle-left-red triangle triangle-red"></div>
+          <div
+            id="trr34"
+            class="triangle-right-red triangle triangle-red"
+          ></div>
+          <div class="myName" id="fullStack">
+            Full-Stack
+          </div>
+          <div class="myName" id="developer">Developer</div>
+        </div>
+      </div>
+    </div>
+    <script
+      type="text/javascript"
+      src="http://code.jquery.com/jquery-1.8.3.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
+    ></script>
+    <script src="javascripts/application.js"></script>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
+    ></script>
+    <script>
+      $(document).ready(function() {
+        $(".pageContent").slick({
+          arrows: true,
+          prevArrow: $("#trb32"),
+          nextArrow: $("#trr34")
+        });
+      });
+    </script>
+  </body>
 </html>
