--- a/index.html
+++ b/index.html
@@ -223,8 +223,9 @@
       </div>
     </div>
     <script
-      type="text/javascript"
-      src="http://code.jquery.com/jquery-1.8.3.js"
+      src="https://code.jquery.com/jquery-3.4.1.js"
+      integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+      crossorigin="anonymous"
     ></script>
     <script
       type="text/javascript"
