--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     />
   </head>
   <body>
-    <!-- <div class="navigation">
+    <div class="navigation">
       <div class="down logo">
         <a href="#cover">
           <div class="img_logo"></div>
@@ -28,36 +28,16 @@
       <div class="down"><a href="#work">Work</a></div>
       <div class="down"><a href="#notes">Notes</a></div>
       <div class="down"><a href="#contact">Contact</a></div>
-    </div> -->
+    </div>
 
     <div class="container">
-      <section id="cover">
-        <!-- <div class="downCenter">
-          <a href="#about">About</a>
-          <div class="arrow"></div>
-        </div> -->
-      </section>
+      <section id="cover"></section>
 
-      <section id="about">
-        <!-- <div class="downCenter">
-          <a href="#work">Work</a>
-          <div class="arrow"></div>
-        </div> -->
-      </section>
+      <section id="about"></section>
 
-      <section id="work">
-        <!-- <div class="downCenter">
-          <a href="#notes">Notes</a>
-          <div class="arrow"></div>
-        </div> -->
-      </section>
+      <section id="work"></section>
 
-      <section id="notes">
-        <!-- <div class="downCenter">
-          <a href="#contact">Contact</a>
-          <div class="arrow"></div>
-        </div> -->
-      </section>
+      <section id="notes"></section>
       <footer id="contact"></footer>
     </div>
     <div id="skills" class="page">
@@ -81,7 +61,11 @@
                 <li>inSeason . . . . . . . . . . . . . . 4<span></span></li>
               </ul>
               <li>
-                About Me . . . . . . . . . . . . . . . . 5
+                  Resume . . . . . . . . . . . . . . . . 5
+                  <span></span>
+                </li>
+              <li>
+                About Me . . . . . . . . . . . . . . . . 6
                 <span></span>
               </li>
             </ul>
@@ -89,26 +73,62 @@
         </div>
         <div>
           <div class="pageText">
+            <h3>Skills</h3>
+            <hr />
+            <ul>
+              <li>HTML 5</li>
+              <li>CSS 3</li>
+              <li>JavaScript</li>
+              <li>JQuery</li>
+              <li>Node.js</li>
+              <li>JQuery</li>
+            </ul>
+          </div>
+        </div>
+        <div>
+          <div class="pageText">
             <h3>Island Word Guess</h3>
             <hr />
-            <img class="thumbnail" src="assets/islandthumb2.png" />
+            <a = href="https://bhoff5.github.io/Word-Guess-Game/"
+            target="_blank"><img
+              class="thumbnail"
+              src="assets/islandthumb2.png"
+            /></a>
           </div>
         </div>
         <div>
           <div class="pageText">
             <h3>Planet Trivia</h3>
             <hr />
-            <img class="thumbnail" src="assets/planetthumb2.png" />
+            <a href="https://bhoff5.github.io/TriviaGame/" target="_blank"
+              ><img class="thumbnail" src="assets/planetthumb2.png"
+            /></a>
           </div>
         </div>
         <div>
           <div class="pageText">
             <h3>inSeason</h3>
             <hr />
-            <img class="thumbnail" src="assets/inSeasonthumb2.png" />
+            <a
+              href="https://peaceful-scrubland-63370.herokuapp.com"
+              target="_blank"
+              ><img class="thumbnail" src="assets/inSeasonthumb2.png"
+            /></a>
           </div>
         </div>
-        <div>This is test content</div>
+        <div>
+            <div class="pageText">
+              <h3>Resume</h3>
+              <hr />
+            </div>
+          </div>
+        <div>
+          <div class="pageText bio">
+            <img class="profilePic" src="assets/profilePic.png" />
+            <h3>About Me</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+        </div>
       </div>
     </div>
     <div class="backgrounds">
@@ -222,6 +242,7 @@
         </div>
       </div>
     </div>
+
     <script
       src="https://code.jquery.com/jquery-3.4.1.js"
       integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
