--- a/index.html
+++ b/index.html
@@ -16,121 +16,153 @@
       type="text/css"
       href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
     />
+    <!-- External JS dependencies -->
+    <script
+      type="text/javascript"
+      src="javascripts/jquery-2.0.3.min.js"
+    ></script>
+    <script type="text/javascript" src="javascripts/underscore-min.js"></script>
+    <script type="text/javascript" src="javascripts/backbone-min.js"></script>
+
+    <!-- Turn.js UI Kit -->
+    <script type="text/javascript" src="javascripts/turn.min.js"></script>
+
+    <!-- App dependencies -->
+    <script type="text/javascript" src="javascripts/app.js"></script>
+
+    <!-- External CSS dependencies -->
+    <!-- <link type="text/css" rel="stylesheet" href="assets/css/font-awesome.min.css"></link> -->
+    <!-- <link rel="icon" type="image/png" href="assets/img/favicon.png?a" /> -->
+    <link
+      href="http://fonts.googleapis.com/css?family=Carrois+Gothic+SC"
+      rel="stylesheet"
+      type="text/css"
+    />
+
+    <!-- App CSS dependencies -->
+    <link type="text/css" rel="stylesheet" href="stylesheets/main.css" />
   </head>
   <body>
+    <div id="skills" class="catalog-app">
+      <div id="viewer">
+        <div id="flipbook" class="ui-flipbook">
+          <div style="background-color:#0f0f0f;"></div>
+          <div>
+            <img
+              src="https://picsum.photos/id/237/200/300"
+              height="100%"
+              width="100%"
+            />
+          </div>
+          <div>
+            <img
+              src="https://picsum.photos/id/237/200/300"
+              height="100%"
+              width="100%"
+            />
+          </div>
+          <div>
+            
+              <div class="pageText">
+                <h3>Table of Contents</h3>
+                <hr />
+                <ul>
+                  <li>
+                    Skills . . . . . . . . . . . . . . . . . . 1
+                    <span></span>
+                  </li>
+                  <li>
+                    Portfolio . . . . . . . . . . . . . . . . . 2
+                    <span></span>
+                  </li>
+                  <ul>
+                    <li>Island Word Guess . . . . . . . 2<span></span></li>
+                    <li>Planet Trivia . . . . . . . . . . . 3<span></span></li>
+                    <li>inSeason . . . . . . . . . . . . . . 4<span></span></li>
+                  </ul>
+                  <li>
+                    Resume . . . . . . . . . . . . . . . . 5
+                    <span></span>
+                  </li>
+                  <li>
+                    About Me . . . . . . . . . . . . . . . . 6
+                    <span></span>
+                  </li>
+                </ul>
+              </div>
+           
+          </div>
+          <div>
+            <div class="pageText">
+              <h3>Skills</h3>
+              <hr />
+              <ul>
+                <li>HTML 5</li>
+                <li>CSS 3</li>
+                <li>JavaScript</li>
+                <li>JQuery</li>
+                <li>Node.js</li>
+                <li>JQuery</li>
+              </ul>
+            </div>
+          </div>
+          <div>
+            <div class="pageText">
+              <h3>Island Word Guess</h3>
+              <hr />
+              <a href="https://bhoff5.github.io/Word-Guess-Game/"
+              target="_blank"><img
+                class="thumbnail"
+                src="assets/islandthumb2.png"
+              />
+            </div>
+          </div>
+
+          <div>
+            <div class="pageText bio">
+              <img class="profilePic" src="assets/profilePic.png" />
+              <h3>About Me</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                sunt in culpa qui officia deserunt mollit anim id est laborum.
+              </p>
+            </div>
+          </div>
+          <div>
+            <img
+              src="https://picsum.photos/id/237/200/300"
+              height="100%"
+              width="100%"
+            />
+          </div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <!-- <a ignore="1" class="ui-arrow-control ui-arrow-next-page"></a> -->
+          <!-- <a ignore="1" class="ui-arrow-control ui-arrow-previous-page"></a> -->
+        </div>
+      </div>
+    </div>
+
     <div class="navigation">
       <div class="down logo">
         <a href="#cover">
-          <div class="img_logo"></div>
+          <!-- <div class="img_logo"></div> -->
         </a>
       </div>
-      <div class="down"><a href="#about">About</a></div>
-      <div class="down"><a href="#work">Work</a></div>
+      <!-- <div class="down"><a href="#about">About</a></div> -->
+      <!-- <div class="down"><a href="#work">Work</a></div>
       <div class="down"><a href="#notes">Notes</a></div>
-      <div class="down"><a href="#contact">Contact</a></div>
+      <div class="down"><a href="#contact">Contact</a></div> -->
     </div>
 
-    <div class="container">
-      <section id="cover"></section>
-
-      <section id="about"></section>
-
-      <section id="work"></section>
-
-      <section id="notes"></section>
-      <footer id="contact"></footer>
-    </div>
-    <div id="skills" class="page">
-      <div class="pageContent">
-        <div>
-          <div class="pageText">
-            <h3>Table of Contents</h3>
-            <hr />
-            <ul>
-              <li>
-                Skills . . . . . . . . . . . . . . . . . . 1
-                <span></span>
-              </li>
-              <li>
-                Portfolio . . . . . . . . . . . . . . . . . 2
-                <span></span>
-              </li>
-              <ul>
-                <li>Island Word Guess . . . . . . . 2<span></span></li>
-                <li>Planet Trivia . . . . . . . . . . . 3<span></span></li>
-                <li>inSeason . . . . . . . . . . . . . . 4<span></span></li>
-              </ul>
-              <li>
-                  Resume . . . . . . . . . . . . . . . . 5
-                  <span></span>
-                </li>
-              <li>
-                About Me . . . . . . . . . . . . . . . . 6
-                <span></span>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div>
-          <div class="pageText">
-            <h3>Skills</h3>
-            <hr />
-            <ul>
-              <li>HTML 5</li>
-              <li>CSS 3</li>
-              <li>JavaScript</li>
-              <li>JQuery</li>
-              <li>Node.js</li>
-              <li>JQuery</li>
-            </ul>
-          </div>
-        </div>
-        <div>
-          <div class="pageText">
-            <h3>Island Word Guess</h3>
-            <hr />
-            <a = href="https://bhoff5.github.io/Word-Guess-Game/"
-            target="_blank"><img
-              class="thumbnail"
-              src="assets/islandthumb2.png"
-            /></a>
-          </div>
-        </div>
-        <div>
-          <div class="pageText">
-            <h3>Planet Trivia</h3>
-            <hr />
-            <a href="https://bhoff5.github.io/TriviaGame/" target="_blank"
-              ><img class="thumbnail" src="assets/planetthumb2.png"
-            /></a>
-          </div>
-        </div>
-        <div>
-          <div class="pageText">
-            <h3>inSeason</h3>
-            <hr />
-            <a
-              href="https://peaceful-scrubland-63370.herokuapp.com"
-              target="_blank"
-              ><img class="thumbnail" src="assets/inSeasonthumb2.png"
-            /></a>
-          </div>
-        </div>
-        <div>
-            <div class="pageText">
-              <h3>Resume</h3>
-              <hr />
-            </div>
-          </div>
-        <div>
-          <div class="pageText bio">
-            <img class="profilePic" src="assets/profilePic.png" />
-            <h3>About Me</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          </div>
-        </div>
-      </div>
-    </div>
     <div class="backgrounds">
       <div class="danPortrait">
         <div class="danContainer">
@@ -168,13 +200,15 @@
           ></div>
           <div
             id="tlb33"
-            class="triangle-left-blue triangle triangle-blue"
+            class="triangle-left-blue triangle triangle-blue ui-arrow-control ui-arrow-previous-page"
+            ignore="1"
           ></div>
+
           <div id="trr9" class="triangle-right-red triangle triangle-red"></div>
           <div id="tlr11" class="triangle-left-red triangle triangle-red"></div>
           <div id="tlr13" class="triangle-left-red triangle triangle-red"></div>
           <div id="tlr15" class="triangle-left-red triangle triangle-red"></div>
-          <div id="tlr19" class="triangle-left-red triangle triangle-red"></div>
+          <div id="tlr19" class="triangle-left-zz triangle triangle-red"></div>
           <div id="tlr21" class="triangle-left-red triangle triangle-red"></div>
           <div id="tlr27" class="triangle-left-red triangle triangle-red"></div>
           <div id="tlr31" class="triangle-left-red triangle triangle-red"></div>
@@ -233,7 +267,8 @@
           <div id="tlr30" class="triangle-left-red triangle triangle-red"></div>
           <div
             id="trr34"
-            class="triangle-right-red triangle triangle-red"
+            class="triangle-right-red triangle triangle-red ui-arrow-control ui-arrow-next-page"
+            ignore="1"
           ></div>
           <div class="myName" id="fullStack">
             Full-Stack
@@ -257,13 +292,22 @@
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
-    <script>
-      $(document).ready(function() {
-        $(".pageContent").slick({
-          arrows: true,
-          prevArrow: $("#trb32"),
-          nextArrow: $("#trr34")
-        });
+
+    <script type="text/javascript">
+      // Change these settings
+
+      FlipbookSettings = {
+        options: {
+          width: 1280,
+          height: 920,
+          duration: 1500,
+          elevation: 5,
+          page: 2
+        }
+      };
+
+      $(window).load(function(event) {
+        $("#flipbook .page-1").addClass("animation-on");
       });
     </script>
   </body>
