--- a/index.html
+++ b/index.html
@@ -62,40 +62,54 @@
             />
           </div>
           <div>
-            
-              <div class="pageText">
-                <h3>Table of Contents</h3>
-                <hr />
+            <div class="pageText">
+              <h3>Table of Contents</h3>
+              <svg height="1px" width="100%">
+                <line
+                  x1="0"
+                  y1="50%"
+                  x2="100%"
+                  y2="50%"
+                  style="stroke:#56514873;stroke-width:1"
+                />
+              </svg>
+              <ul>
+                <li>
+                  Skills . . . . . . . . . . . . . . . . . . 1
+                  <span></span>
+                </li>
+                <li>
+                  Portfolio . . . . . . . . . . . . . . . . . 2
+                  <span></span>
+                </li>
                 <ul>
-                  <li>
-                    Skills . . . . . . . . . . . . . . . . . . 1
-                    <span></span>
-                  </li>
-                  <li>
-                    Portfolio . . . . . . . . . . . . . . . . . 2
-                    <span></span>
-                  </li>
-                  <ul>
-                    <li>Island Word Guess . . . . . . . 2<span></span></li>
-                    <li>Planet Trivia . . . . . . . . . . . 3<span></span></li>
-                    <li>inSeason . . . . . . . . . . . . . . 4<span></span></li>
-                  </ul>
-                  <li>
-                    Resume . . . . . . . . . . . . . . . . 5
-                    <span></span>
-                  </li>
-                  <li>
-                    About Me . . . . . . . . . . . . . . . . 6
-                    <span></span>
-                  </li>
+                  <li>Island Word Guess . . . . 2<span></span></li>
+                  <li>Planet Trivia . . . . . . . . . 3<span></span></li>
+                  <li>inSeason . . . . . . . . . . . . . 4<span></span></li>
                 </ul>
-              </div>
-           
+                <li>
+                  Resume . . . . . . . . . . . . . . . . 5
+                  <span></span>
+                </li>
+                <li>
+                  About Me . . . . . . . . . . . . . . . . 6
+                  <span></span>
+                </li>
+              </ul>
+            </div>
           </div>
           <div>
             <div class="pageText">
               <h3>Skills</h3>
-              <hr />
+              <svg height="1px" width="100%">
+                <line
+                  x1="0"
+                  y1="50%"
+                  x2="100%"
+                  y2="50%"
+                  style="stroke:#56514873;stroke-width:1"
+                />
+              </svg>
               <ul>
                 <li>HTML 5</li>
                 <li>CSS 3</li>
@@ -109,15 +123,79 @@
           <div>
             <div class="pageText">
               <h3>Island Word Guess</h3>
-              <hr />
-              <a href="https://bhoff5.github.io/Word-Guess-Game/"
-              target="_blank"><img
-                class="thumbnail"
-                src="assets/islandthumb2.png"
-              />
+              <svg height="1px" width="100%">
+                <line
+                  x1="0"
+                  y1="50%"
+                  x2="100%"
+                  y2="50%"
+                  style="stroke:#56514873;stroke-width:1"
+                />
+              </svg>
+              <a
+                href="https://bhoff5.github.io/Word-Guess-Game/"
+                target="_blank"
+                ><img class="thumbnail" src="assets/islandthumb2.png"
+              /></a>
             </div>
           </div>
-
+          <div>
+            <div class="pageText">
+              <h3>Planet Trivia</h3>
+              <svg height="1px" width="100%">
+                <line
+                  x1="0"
+                  y1="50%"
+                  x2="100%"
+                  y2="50%"
+                  style="stroke:#56514873;stroke-width:1"
+                />
+              </svg>
+              <a
+                href="https://bhoff5.github.io/Word-Guess-Game/"
+                target="_blank"
+                ><img class="thumbnail" src="assets/planetthumb.png"
+              /></a>
+            </div>
+          </div>
+          <div>
+            <div class="pageText">
+              <h3>inSeason</h3>
+              <svg height="1px" width="100%">
+                <line
+                  x1="0"
+                  y1="50%"
+                  x2="100%"
+                  y2="50%"
+                  style="stroke:#56514873;stroke-width:1"
+                />
+              </svg>
+              <a
+                href="https://bhoff5.github.io/Word-Guess-Game/"
+                target="_blank"
+                ><img class="thumbnail" src="assets/inSeasonthumb2.png"
+              /></a>
+            </div>
+          </div>
+          <div>
+            <div class="pageText">
+              <h3>Island Word Guess</h3>
+              <svg height="1px" width="100%">
+                <line
+                  x1="0"
+                  y1="50%"
+                  x2="100%"
+                  y2="50%"
+                  style="stroke:#56514873;stroke-width:1"
+                />
+              </svg>
+              <a
+                href="https://bhoff5.github.io/Word-Guess-Game/"
+                target="_blank"
+                ><img class="thumbnail" src="assets/islandthumb2.png"
+              /></a>
+            </div>
+          </div>
           <div>
             <div class="pageText bio">
               <img class="profilePic" src="assets/profilePic.png" />
@@ -133,18 +211,6 @@
               </p>
             </div>
           </div>
-          <div>
-            <img
-              src="https://picsum.photos/id/237/200/300"
-              height="100%"
-              width="100%"
-            />
-          </div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
           <!-- <a ignore="1" class="ui-arrow-control ui-arrow-next-page"></a> -->
           <!-- <a ignore="1" class="ui-arrow-control ui-arrow-previous-page"></a> -->
         </div>
