--- a/index.html
+++ b/index.html
@@ -11,15 +11,13 @@
       href="https://fonts.googleapis.com/css?family=Domine&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
-    />
+
     <!-- External JS dependencies -->
+
     <script
-      type="text/javascript"
-      src="javascripts/jquery-2.0.3.min.js"
+      src="https://code.jquery.com/jquery-3.4.1.js"
+      integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+      crossorigin="anonymous"
     ></script>
     <script type="text/javascript" src="javascripts/underscore-min.js"></script>
     <script type="text/javascript" src="javascripts/backbone-min.js"></script>
@@ -33,18 +31,13 @@
     <!-- External CSS dependencies -->
     <!-- <link type="text/css" rel="stylesheet" href="assets/css/font-awesome.min.css"></link> -->
     <!-- <link rel="icon" type="image/png" href="assets/img/favicon.png?a" /> -->
-    <link
-      href="http://fonts.googleapis.com/css?family=Carrois+Gothic+SC"
-      rel="stylesheet"
-      type="text/css"
-    />
 
     <!-- App CSS dependencies -->
     <link type="text/css" rel="stylesheet" href="stylesheets/main.css" />
   </head>
   <body>
     <div class="container">
-      <div id="skills" class="catalog-app">
+      <div id="catalog" class="catalog-app">
         <div id="viewer">
           <div id="flipbook" class="ui-flipbook">
             <div style="background-color:#0f0f0f;"></div>
@@ -232,8 +225,8 @@
       </div>
 
       <div class="backgrounds">
-        <div class="danPortrait">
-          <div class="danContainer">
+        <div class="rightPortrait">
+          <div class="rightContainer">
             <div
               id="tlb3"
               class="triangle-left-blue triangle triangle-blue"
@@ -309,8 +302,8 @@
             </div>
           </div>
         </div>
-        <div class="johnPortrait">
-          <div class="johnContainer">
+        <div class="leftPortrait">
+          <div class="leftContainer">
             <div
               id="trb2"
               class="triangle-right-blue triangle triangle-blue"
@@ -388,21 +381,7 @@
         </div>
       </div>
     </div>
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.js"
-      integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-      crossorigin="anonymous"
-    ></script>
-    <script
-      type="text/javascript"
-      src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
-    ></script>
     <script src="javascripts/application.js"></script>
-    <script
-      type="text/javascript"
-      src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
-    ></script>
-
     <script type="text/javascript">
       // Change these settings
 
