--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             ></div>
             <div
               id="tlb23"
-              class="triangle-left-blue triangle triangle-blue"
+              class="triangle-left-yellow triangle triangle-blue"
             ></div>
             <div
               id="tlb25"
@@ -265,7 +265,7 @@
             ></div>
             <div
               id="tlr19"
-              class="triangle-left-zz triangle triangle-red"
+              class="triangle-left-red triangle triangle-red"
             ></div>
             <div
               id="tlr21"
