--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- <link rel="icon" type="image/png" href="assets/img/favicon.png?a" /> -->
 
     <!-- App CSS dependencies -->
-    <link type="text/css" rel="stylesheet" href="stylesheets/main.css" />
+    <!-- <link type="text/css" rel="stylesheet" href="stylesheets/main.css" /> -->
   </head>
   <body>
     <div class="container">
