--- a/index.html
+++ b/index.html
@@ -371,8 +371,7 @@
         options: {
           width: 1280,
           height: 920,
-          duration: 1500,
-          page: 9
+          duration: 1500
         }
       };
 
