adding recent projects, links

--- a/index.html
+++ b/index.html
@@ -43,13 +43,6 @@
             <div style="background-color:#0f0f0f;"></div>
 
             <div>
-              <img
-                src="https://picsum.photos/id/237/200/300"
-                height="100%"
-                width="100%"
-              />
-            </div>
-            <div>
               <div class="pageText">
                 <h3>Table of Contents</h3>
                 <svg height="1px" width="100%">
@@ -98,14 +91,24 @@
                     style="stroke:#56514873;stroke-width:1"
                   />
                 </svg>
-                <ul>
-                  <li>HTML 5</li>
-                  <li>CSS 3</li>
-                  <li>JavaScript</li>
-                  <li>JQuery</li>
-                  <li>Node.js</li>
-                  <li>JQuery</li>
-                </ul>
+                <img class="thumbnail" src="assets/skills.png" />
+              </div>
+            </div>
+            <div>
+              <div class="pageText">
+                <h3>aPART App</h3>
+                <svg height="1px" width="100%">
+                  <line
+                    x1="0"
+                    y1="50%"
+                    x2="100%"
+                    y2="50%"
+                    style="stroke:#56514873;stroke-width:1"
+                  />
+                </svg>
+                <a href="https://apart-app.herokuapp.com//" target="_blank"
+                  ><img class="thumbnail" src="assets/aPartThumb.png"
+                /></a>
               </div>
             </div>
             <div>
@@ -124,6 +127,25 @@
                   href="https://bhoff5.github.io/Word-Guess-Game/"
                   target="_blank"
                   ><img class="thumbnail" src="assets/islandthumb2.png"
+                /></a>
+              </div>
+            </div>
+            <div>
+              <div class="pageText">
+                <h3>Freshwater Fish Game</h3>
+                <svg height="1px" width="100%">
+                  <line
+                    x1="0"
+                    y1="50%"
+                    x2="100%"
+                    y2="50%"
+                    style="stroke:#56514873;stroke-width:1"
+                  />
+                </svg>
+                <a href="https://bhoff5.github.io/clicky-game/" target="_blank"
+                  ><img
+                    class="thumbnail"
+                    src="assets/freshwaterFishGameThumb.png"
                 /></a>
               </div>
             </div>
@@ -139,48 +161,8 @@
                     style="stroke:#56514873;stroke-width:1"
                   />
                 </svg>
-                <a
-                  href="https://bhoff5.github.io/Word-Guess-Game/"
-                  target="_blank"
+                <a href="https://bhoff5.github.io/TriviaGame/" target="_blank"
                   ><img class="thumbnail" src="assets/planetthumb.png"
-                /></a>
-              </div>
-            </div>
-            <div>
-              <div class="pageText">
-                <h3>inSeason</h3>
-                <svg height="1px" width="100%">
-                  <line
-                    x1="0"
-                    y1="50%"
-                    x2="100%"
-                    y2="50%"
-                    style="stroke:#56514873;stroke-width:1"
-                  />
-                </svg>
-                <a
-                  href="https://bhoff5.github.io/Word-Guess-Game/"
-                  target="_blank"
-                  ><img class="thumbnail" src="assets/inSeasonthumb2.png"
-                /></a>
-              </div>
-            </div>
-            <div>
-              <div class="pageText">
-                <h3>Island Word Guess</h3>
-                <svg height="1px" width="100%">
-                  <line
-                    x1="0"
-                    y1="50%"
-                    x2="100%"
-                    y2="50%"
-                    style="stroke:#56514873;stroke-width:1"
-                  />
-                </svg>
-                <a
-                  href="https://bhoff5.github.io/Word-Guess-Game/"
-                  target="_blank"
-                  ><img class="thumbnail" src="assets/islandthumb2.png"
                 /></a>
               </div>
             </div>
@@ -189,15 +171,33 @@
                 <img class="profilePic" src="assets/profilePic.png" />
                 <h3>About Me</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                  irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                  cupidatat non proident, sunt in culpa qui officia deserunt
-                  mollit anim id est laborum.
+                  Technical Writer turned Full-Stack Developer with a knack for
+                  communicating information in creative and compelling ways.
+                  Scientific background providing a strong foundation in
+                  reasoning and problem-solving. Professional background
+                  providing strong foundation in communication and teamwork.
+                  Passion for coding, design, UI/UX, and creative thinking.
                 </p>
+                <ul>
+                  <li>
+                    <a
+                      href="https://bhoff5.github.io/assets/BrianHoffResume.pdf"
+                      target="_blank"
+                      >Resume</a
+                    >
+                  </li>
+                  <li>
+                    <a href="https://github.com/bhoff5" target="_blank"
+                      >GitHub</a
+                    >
+                  </li>
+                  <li>
+                    <a href="https://linkedin.com/in/brianlhoff" target="_blank"
+                      >LinkedIn</a
+                    >
+                  </li>
+                  <li>BrianLHoff@gmail.com</li>
+                </ul>
               </div>
             </div>
             <!-- <a ignore="1" class="ui-arrow-control ui-arrow-next-page"></a> -->
