--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <div class="container">
       <div id="catalog" class="catalog-app">
         <div id="viewer">
+          <!-- <div class="toTop">Back to Top</div> -->
           <div id="flipbook" class="ui-flipbook animation-on">
             <div style="background-color:#0f0f0f;"></div>
 
@@ -64,12 +65,13 @@
                     <span></span>
                   </li>
                   <ul>
-                    <li>Island Word Guess . . . . 2<span></span></li>
-                    <li>Planet Trivia . . . . . . . . . 3<span></span></li>
-                    <li>inSeason . . . . . . . . . . . . . 4<span></span></li>
+                    <li>aPART app . . . . . . . . . 2<span></span></li>
+                    <li>Island Word Guess . . . . . . . 3<span></span></li>
+                    <li>Freshwater Fish Game . . . . . . . 4<span></span></li>
+                    <li>Planet Trivia . . . . . . . . . 5<span></span></li>
                   </ul>
                   <li>
-                    Resume . . . . . . . . . . . . . . . . 5
+                    Resume . . . . . . . . . . . . . . . . 6
                     <span></span>
                   </li>
                   <li>
@@ -77,6 +79,9 @@
                     <span></span>
                   </li>
                 </ul>
+                <div style="text-align: center; font-size: 2.5vh">
+                  <a href="#">Return to Top</a>
+                </div>
               </div>
             </div>
             <div>
@@ -196,7 +201,12 @@
                       >LinkedIn</a
                     >
                   </li>
-                  <li>BrianLHoff@gmail.com</li>
+                  <li>
+                    <a href="BrianLHoff@gmail.com" target="_blank"
+                      >BrianLHoff@gmail.com</a
+                    >
+                  </li>
+                  <li><a href="#">Return to Top</a></li>
                 </ul>
               </div>
             </div>
