adding github links

--- a/index.html
+++ b/index.html
@@ -111,9 +111,12 @@
                     style="stroke:#56514873;stroke-width:1"
                   />
                 </svg>
-                <a href="https://apart-app.herokuapp.com//" target="_blank"
+                <a href="https://apart-app.herokuapp.com/" target="_blank"
                   ><img class="thumbnail" src="assets/aPartThumb.png"
                 /></a>
+                <a href="https://github.com/bhoff5/Project-3"
+                  ><h3 class="gitLink">View on GitHub</h3></a
+                >
               </div>
             </div>
             <div>
@@ -133,6 +136,9 @@
                   target="_blank"
                   ><img class="thumbnail" src="assets/islandthumb2.png"
                 /></a>
+                <a href="https://github.com/bhoff5/Word-Guess-Game"
+                  ><h3 class="gitLink">View on GitHub</h3></a
+                >
               </div>
             </div>
             <div>
@@ -152,6 +158,9 @@
                     class="thumbnail"
                     src="assets/freshwaterFishGameThumb.png"
                 /></a>
+                <a href="https://github.com/bhoff5/clicky-game"
+                  ><h3 class="gitLink">View on GitHub</h3></a
+                >
               </div>
             </div>
             <div>
@@ -169,6 +178,9 @@
                 <a href="https://bhoff5.github.io/TriviaGame/" target="_blank"
                   ><img class="thumbnail" src="assets/planetthumb.png"
                 /></a>
+                <a href="https://github.com/bhoff5/TriviaGame"
+                  ><h3 class="gitLink">View on GitHub</h3></a
+                >
               </div>
             </div>
             <div>
