hiding last arrow

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                   </li>
                 </ul>
                 <div style="text-align: center; font-size: 2.5vh">
-                  <a href="#">Return to Top</a>
+                  <a class="gitLink" href="#">Return to Top</a>
                 </div>
               </div>
             </div>
@@ -114,9 +114,7 @@
                 <a href="https://apart-app.herokuapp.com/" target="_blank"
                   ><img class="thumbnail" src="assets/aPartThumb.png"
                 /></a>
-                <a href="https://github.com/bhoff5/Project-3"
-                  ><h3 class="gitLink">View on GitHub</h3></a
-                >
+                <h3 class="gitLink">Click image above to open.</h3>
               </div>
             </div>
             <div>
@@ -136,9 +134,7 @@
                   target="_blank"
                   ><img class="thumbnail" src="assets/islandthumb2.png"
                 /></a>
-                <a href="https://github.com/bhoff5/Word-Guess-Game"
-                  ><h3 class="gitLink">View on GitHub</h3></a
-                >
+                <h3 class="gitLink">Click image above to open.</h3>
               </div>
             </div>
             <div>
@@ -158,9 +154,7 @@
                     class="thumbnail"
                     src="assets/freshwaterFishGameThumb.png"
                 /></a>
-                <a href="https://github.com/bhoff5/clicky-game"
-                  ><h3 class="gitLink">View on GitHub</h3></a
-                >
+                <h3 class="gitLink">Click image above to open.</h3>
               </div>
             </div>
             <div>
@@ -178,9 +172,7 @@
                 <a href="https://bhoff5.github.io/TriviaGame/" target="_blank"
                   ><img class="thumbnail" src="assets/planetthumb.png"
                 /></a>
-                <a href="https://github.com/bhoff5/TriviaGame"
-                  ><h3 class="gitLink">View on GitHub</h3></a
-                >
+                <h3 class="gitLink">Click image above to open.</h3>
               </div>
             </div>
             <div>
@@ -389,6 +381,10 @@
     <script type="text/javascript">
       // Change these settings
 
+      // if ($("#flipbook").turn("page") == 8) {
+      //   $("#trr34").css("display", "none");
+      // }
+
       FlipbookSettings = {
         options: {
           width: 1280,
@@ -396,16 +392,6 @@
           duration: 1500
         }
       };
-
-      // $("#flipbook").bind("turning", function(event, page, view) {
-      //   if (page == 1) {
-      //     event.preventDefault();
-      //   }
-      // });
-
-      // $(window).load(function(event) {
-      //   $("#flipbook").addClass("animation-on");
-      // });
     </script>
   </body>
 </html>
