--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
       // if ($("#flipbook").turn("page") == 8) {
       //   $("#trr34").css("display", "none");
       // }
-
+      //this is a test
       FlipbookSettings = {
         options: {
           width: 1280,
