adding sfh link

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                   <span></span>
                 </li>
                 <ul>
+                  <li>Store for Humans . . . . . . . . 2<span></span></li>
                   <li>aPART app . . . . . . . . . 2<span></span></li>
                   <li>Island Word Guess . . . . . . . 3<span></span></li>
                   <li>Freshwater Fish Game . . . . . . . 4<span></span></li>
@@ -89,7 +90,7 @@
               <svg height="1px" width="100%">
                 <line x1="0" y1="50%" x2="100%" y2="50%" style="stroke:#56514873;stroke-width:1" />
               </svg>
-              <a href="https://apart-app.herokuapp.com/" target="_blank"><img class="thumbnail"
+              <a href="https://www.storeforhumans.com/" target="_blank"><img class="thumbnail"
                   src="assets/aPartThumb.png" /></a>
               <h3 class="gitLink">Click image above to open.</h3>
             </div>
